Fixed bug #36575 (SOAP: Incorrect complex type instantiation with hierarchies)