ext/soap/tests/bugs/bug35142.phpt
@@ -49,7 +49,7 @@ class LogOffEvent {
   public $audienceMemberId;
   public $timestamp;
   public $smokeStatus;
-  public $callInititator;
+  public $callInitiator;
 
   function __construct($audienceMemberId, $timestamp, $smokeStatus) {
     $this->audienceMemberId = $audienceMemberId;
@@ -98,6 +98,15 @@ object(IVREvents)#%d (6) {
   int(101)
   ["messageId"]=>
   int(12345)
+  ["source"]=>
+  string(3) "IVR"
+  ["logOnEvent"]=>
+  object(LogOnEvent)#%d (2) {
+    ["audienceMemberId"]=>
+    int(34567)
+    ["timestamp"]=>
+    string(25) "2005-11-08T11:22:07+03:00"
+  }
   ["logOffEvent"]=>
   array(2) {
     [0]=>
@@ -123,13 +132,4 @@ object(IVREvents)#%d (6) {
       string(3) "IVR"
     }
   }
-  ["logOnEvent"]=>
-  object(LogOnEvent)#%d (2) {
-    ["audienceMemberId"]=>
-    int(34567)
-    ["timestamp"]=>
-    string(25) "2005-11-08T11:22:07+03:00"
-  }
-  ["source"]=>
-  string(3) "IVR"
 }
